--- a/css/styles.css
+++ b/css/styles.css
@@ -117,11 +117,14 @@ body {
 
 /* header end */
 /*hero*/
-.hero {
+.hero {background: rgba(47, 48, 58, 0.4);
   padding-top: 200px;
   padding-bottom: 200px;
-  /*background-color: var(--color-background-footer);*/
-  background-image:  url(D:\учеба\goit-markup-hw-04\imeges\home\Img-hirow.jpg);
+  background-image: url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
+background-size: 1600px 600px;
+background-position: center;
+background-repeat: no-repeat;
+  
 }
 .hero-title {
   margin-right: auto;
@@ -220,6 +223,16 @@ body {
   font-size: 16px;
   line-height: 1.18;
 }
+/*.icon {
+  border: #212121 solid 2px;
+    display:block;
+    width: 44px;
+    height: 44px;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+  }*/
+  
 /*team ehd*/
 /*footer*/
 .footer {
