--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ background-repeat: no-repeat;
   font-size: 16px;
   line-height: 1.18;
 }
-/*.icon {
+.icon {
   border: #212121 solid 2px;
     display:block;
     width: 44px;
@@ -231,7 +231,7 @@ background-repeat: no-repeat;
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
-  }*/
+  }
   
 /*team ehd*/
 /*footer*/
